--- a/index.html
+++ b/index.html
@@ -1,27 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intelligence Survey</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Intelligence and Personality Test</title>
+    <style>
+        /* Basic styles for a clean look */
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+        }
+        .container {
+            background: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
-    <div id="particles-js"></div>
-    <div class="container" id="user-info">
-        <h1>Enter Your Details</h1>
-        <label for="name">Name:</label>
-        <input type="text" id="name">
-        <label for="email">Email:</label>
-        <input type="email" id="email">
-        <button id="start-survey">Start Survey</button>
+    <div class="container">
+        <h2>Welcome to the Intelligence and Personality Test</h2>
+        <form id="userForm">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required><br><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required><br><br>
+            <button type="submit">Start Test</button>
+        </form>
     </div>
-
-    <div class="container" id="survey" style="display:none;">
-        <h1>Intelligence Survey</h1>
-        <div id="questions"></div>
-        <button id="submit-survey">Submit Survey</button>
-    </div>
-    <script src="script.js"></script>
+    <script>
+        document.getElementById('userForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            // Save user data to localStorage
+            localStorage.setItem('name', document.getElementById('name').value);
+            localStorage.setItem('email', document.getElementById('email').value);
+            // Redirect to survey.html
+            window.location.href = 'survey.html';
+        });
+    </script>
 </body>
 </html>
